--- a/src/Pages/CreatePost/CreatePost.scss
+++ b/src/Pages/CreatePost/CreatePost.scss
@@ -54,7 +54,7 @@ textarea::placeholder {
     justify-content: center;
     align-items: center;
     display: flex;
-    width: calc(60vw + 20px);
+    width: 100%;
 
     gap: 20px;
 
